# rkcommon

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
.github/scripts/: build-openmp.sh  build.ps1  build.sh  run_tests.ps1
.github/workflows/: ci.linux.yml  ci.macos.yml  ci.windows.yml  external.ci.linux.yml
cmake/: FindTBB.cmake  Findlibdispatch.cmake  clang-format.cmake  macros.cmake  ospcommonConfig.cmake.in  ospcommon_macros.cmake  ospcommon_redist_deps.cmake  rkcommonConfig.cmake.in  rkcommon_macros.cmake  rkcommon_redist_deps.cmake
gitlab/: .gitlab-ci.yml  build-kw.sh  build.bat  build.ps1  build.sh  kw-gen-report.sh  run_tests.bat  run_tests.ps1  test-kw.sh
ospcommon/: CMakeLists.txt  common.cpp  common.h  intrinsics.h  platform.h  rkcommon.rc  version.h.in
ospcommon/array3D/: Array3D.h  for_each.h
ospcommon/containers/: AlignedVector.h  FlatMap.h  TransactionalBuffer.h  aligned_allocator.h
ospcommon/math/: AffineSpace.h  LinearSpace.h  Quaternion.h  box.h  constants.h  ospmath.h  range.h  vec.h
ospcommon/memory/: DeletedUniquePtr.h  IntrusivePtr.h  RefCount.h  malloc.cpp  malloc.h
ospcommon/networking/: BufferedDataStreaming.cpp  BufferedDataStreaming.h  DataStreaming.cpp  DataStreaming.h  Fabric.cpp  Fabric.h  Socket.cpp  Socket.h  SocketFabric.cpp  SocketFabric.h
ospcommon/os/: FileName.cpp  FileName.h  library.cpp  library.h  sysinfo.cpp  sysinfo.h  thread.cpp  thread.h
ospcommon/tasking/: AsyncLoop.h  AsyncTask.h  async.h  parallel_for.h  parallel_foreach.h  schedule.h  tasking_system_handle.h  tasking_system_init.h
ospcommon/tasking/detail/: TaskSys.cpp  TaskSys.h  parallel_for.inl  schedule.inl  tasking_system_handle.cpp  tasking_system_init.cpp
ospcommon/traits/: osptraits.h
ospcommon/utility/: AbstractArray.h  Any.h  ArgumentList.h  ArrayView.h  CodeTimer.h  DataView.h  DoubleBufferedValue.h  Observer.h  OnScopeExit.h  Optional.h  OwnedArray.h  ParameterizedObject.cpp  ParameterizedObject.h  PseudoURL.cpp  PseudoURL.h  SaveImage.h  StringManip.h  TimeStamp.cpp  TimeStamp.h  TransactionalValue.h  demangle.cpp  demangle.h  getEnvVar.h  multidim_index_sequence.h  random.h
ospcommon/xml/: XML.cpp  XML.h
rkcommon/: CMakeLists.txt  common.cpp  common.h  platform.h  rkcommon.rc  version.h.in
rkcommon/array3D/: Array3D.h  for_each.h
rkcommon/containers/: AlignedVector.h  FlatMap.h  TransactionalBuffer.h  aligned_allocator.h
rkcommon/math/: AffineSpace.h  AffineSpace.ih  LinearSpace.h  LinearSpace.ih  Quaternion.h  box.h  box.ih  constants.h  math.ih  range.h  rkmath.h  vec.h  vec.ih
rkcommon/math/arm/: emulation.h
rkcommon/memory/: DeletedUniquePtr.h  IntrusivePtr.h  RefCount.h  malloc.cpp  malloc.h
rkcommon/networking/: DataStreaming.cpp  DataStreaming.h  Fabric.cpp  Fabric.h  Socket.cpp  Socket.h
rkcommon/os/: FileName.cpp  FileName.h  library.cpp  library.h
rkcommon/tasking/: AsyncLoop.h  AsyncTask.h  async.h  parallel_for.h  parallel_foreach.h  schedule.h  tasking_system_init.h
rkcommon/tasking/detail/: TaskSys.cpp  TaskSys.h  async_task.inl  parallel_for.inl  schedule.inl  tasking_system_init.cpp
rkcommon/tracing/: Tracing.cpp  Tracing.h
rkcommon/traits/: rktraits.h
rkcommon/utility/: AbstractArray.h  Any.h  ArgumentList.h  ArrayView.h  CodeTimer.h  DataView.h  DoubleBufferedValue.h  FixedArray.h  FixedArrayView.h  Observer.h  OnScopeExit.h  Optional.h  OwnedArray.h  ParameterizedObject.cpp  ParameterizedObject.h  PseudoURL.cpp  PseudoURL.h  SaveImage.h  StringManip.h  TimeStamp.cpp  TimeStamp.h  TransactionalValue.h  demangle.cpp  demangle.h  getEnvVar.h  multidim_index_sequence.h  random.h  random.ih
rkcommon/xml/: XML.cpp  XML.h
tests/: CMakeLists.txt  catch_main.cpp
tests/array3D/: test_Array3D.cpp  test_for_each.cpp
tests/containers/: test_AlignedVector.cpp  test_FlatMap.cpp  test_TransactionalBuffer.cpp
tests/math/: test_AffineSpace.cpp  test_LinearSpace.cpp  test_Quaternion.cpp  test_box.cpp  test_constants.cpp  test_ospmath.cpp  test_range.cpp  test_rkmath.cpp  test_vec.cpp
tests/memory/: test_DeletedUniquePtr.cpp  test_RefCount.cpp  test_malloc.cpp
tests/os/: test_FileName.cpp  test_library.cpp
tests/tasking/: test_AsyncLoop.cpp  test_AsyncTask.cpp  test_async.cpp  test_parallel_for.cpp  test_parallel_foreach.cpp  test_schedule.cpp
tests/traits/: test_traits.cpp
tests/utility/: test_AbstractArray.cpp  test_Any.cpp  test_ArgumentList.cpp  test_ArrayView.cpp  test_CodeTimer.cpp  test_DataView.cpp  test_DoubleBufferedValue.cpp  test_Observers.cpp  test_OnScopeExit.cpp  test_Optional.cpp  test_OwnedArray.cpp  test_ParameterizedObject.cpp  test_PseudoURL.cpp  test_SaveImage.cpp  test_StringManip.cpp  test_TimeStamp.cpp  test_TransactionalValue.cpp  test_demangle.cpp  test_getEnvVar.cpp  test_multidim_index_sequence.cpp  test_random.cpp
